--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,21 +1,21 @@
 {
   "development": {
     "username": "drive",
-    "password": "drive@123.rw",
+    "password": "'drive.password'",
     "database": "drive",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
     "username": "drive",
-    "password": "drive@123.rw",
+    "password": "'drive.password'",
     "database": "drive",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
     "username": "drive",
-    "password": "drive@123.rw",
+    "password": "'drive.password'",
     "database": "drive",
     "host": "127.0.0.1",
     "dialect": "postgres"
