--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,6 @@
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.25.3",
-    "swaggify": "^1.0.1"
+    "sequelize": "^6.25.3"
   }
 }
