--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate:reset": "npx sequelize-cli db:migrate:undo:all && npm run migrate",
     "dev": "nodemon --ignore '*swagger.json' app.js"
   },
   "keywords": [
@@ -23,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "joi": "^17.6.4",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
