--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate:reset": "npx sequelize-cli db:migrate:undo:all && npm run migrate",
-    "dev": "nodemon --ignore '*swagger.json' app.js"
+    "dev": "sudo service apache2 stop && sudo /opt/lampp/lampp stop && sudo nodemon --ignore '*swagger.json' ./app.js"
   },
   "keywords": [
     "rental",
